Reduce margin to top of modal for mobile to prevent modal not being visible when three items added

--- a/src/sass/base/_modal.scss
+++ b/src/sass/base/_modal.scss
@@ -21,7 +21,7 @@
     position: fixed;
     padding: 1.5rem;
     top: 0;
-    margin-top: 6rem;
+    margin-top: 2rem;
     width: 100%;
     transform: translate(-50%, 0%);
   }
